--- a/RealmOfThenesios.html
+++ b/RealmOfThenesios.html
@@ -4,8 +4,11 @@
         <!-- En-tête de la page-->
         <meta charset="utf-8"/>
         <title>Realm of Thenesios</title>
-        <style> 
+        <style> img {border : 1px solid #ddd;
+                     border-radius: 150px;
+                     width: 150px;}
         </style>
+        <!--Taille d'image "width"-->
     </head>
 <body>
     <a href="https://data.photofunky.net/output/image/e/b/c/c/ebcc2e/photofunky.gif" target="_blank">
